Make changes